1. Added Quicksand Fonts to whole website  2. Added container to the Hacktoberfest 2018 title, GitHub Repo & para below it.  3. Added  &lt; instead of < to prevent errors. 4. Styled the heading to make it attractive with proper spacing

--- a/css/index.css
+++ b/css/index.css
@@ -26,6 +26,15 @@ body {
    text-align: right;
 }
 
+.hacktoberfest-title {
+  letter-spacing: 2px;
+  font-weight: 700;
+  padding: 30px;
+  background-color: #FFF;
+  width: 80%;
+  border-radius: 10px;
+}
+
 .copy {
   padding-left: 50%;
 }
